feat(mvp2.0): 群组页与人群分布(crowd)实现 + logo manifest 更新 + 赛季榜/LUNA 文档同步
